basicamente cambie todo

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet"> 
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -80,17 +81,15 @@
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">I'm</h3>
-                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;"> silversito </h1>
-                    <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Fulltack Developer</div>
+                    <h3 class="text-secondary font-weight-normal mb-3">Hello! I'm</h3>
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 0px #000000"> Franco Manuel Ceballos </h1>
+                    <h1 class="typed-text-output d-inline font-weight-lighter"></h1>
+                    <div class="typed-text d-none">Trainee FullStack Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-outline-light mr-5">Download CV</a>
-                        <button type="button" class="btn-play" data-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5>
+                        <a href="/files/Cv-FrancoManuelCeballos-2023-5.pdf" class="btn btn-light mr-5">Descargar CV <br>Español</a>
+                        <a href="/files/Cv-FrancoManuelCeballos-2023-5.pdf" class="btn btn-light mr-5">Download CV<br>English</a>
+                        <a class="btn btn-light btn-social mr-5" href="https://www.linkedin.com/in/francomanuelceballos/"><span class="fab fa-linkedin"></span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -111,20 +110,22 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Fulltack Developer, Java Developer, JavaScript Developer</h3>
-                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor justo et dolor dolor dolor</p>
+                    <h3 class="mb-4">Fulltack Developer</h3>
+                    <p>¡Hola! Soy Franco Ceballos, un apasionado desarrollador Full Stack en proceso de aprendizaje y crecimiento en el emocionante mundo de la programación. Mi pasión por la tecnología y el desarrollo de software me ha llevado a embarcarme en esta emocionante carrera para convertirme en un experto en la construcción de aplicaciones web y soluciones innovadoras.
+                        <br><br> Desde que empecé mi viaje como desarrollador trainee, he estado dedicando tiempo y esfuerzo a adquirir un conjunto diverso de habilidades en el desarrollo de aplicaciones web. He explorado lenguajes de programación tanto en el lado del cliente como en el servidor, incluyendo HTML, CSS, JavaScript y más. Además, he trabajado con tecnologías populares como React, Node.js y bases de datos SQL.
+                        <br><br> ¡Gracias por visitar mi página web y estaré encantado de conectarme contigo y conocer más sobre tus proyectos y metas!<br><br>Aquí debajo podrás encontrar formas de contactarme</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Franco Ceballos</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">19 Jan 1996</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Grade</span></h6></div>
-                        <!--<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">10 Years</span></h6></div> -->
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">francoceballos@skrill.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">francomanuelceballos@gmail.com</span></h6></div>
+                        <!--<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">10 Years</span></h6></div> 
+                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">francoceballos@skrill.com</span></h6></div>-->
+                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">francomanuelceballos@gmail.com francoceballos@skiff.com </span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Country: <span class="text-secondary">Argentina</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                    <a href="https://www.linkedin.com/in/francomanuelceballos/" class="btn btn-outline-primary mr-4">Find me in LinkedIn</a>
+                    
                 </div>
             </div>
         </div>
@@ -196,8 +197,8 @@
     <div class="container-fluid py-5" id="skill">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Skills</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">My Skills</h1>
+                <h1 class="position-absolute text-uppercase text-primary"></h1>
             </div>
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -268,8 +269,8 @@
     <div class="container-fluid pt-5" id="service">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Service</h1>
-                <h1 class="position-absolute text-uppercase text-primary">My Services</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">My Services</h1>
+                <h1 class="position-absolute text-uppercase text-primary"></h1>
             </div>
             <div class="row pb-3">
                 <div class="col-lg-4 col-md-6 text-center mb-5">
@@ -326,7 +327,7 @@
     <!-- Services End -->
 
 
-    <!-- Portfolio Start -->
+    <!-- Portfolio Start
     <div class="container-fluid pt-5 pb-3" id="portfolio">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -407,10 +408,10 @@
             </div>
         </div>
     </div>
-    <!-- Portfolio End -->
+     Portfolio End -->
 
-
-    <!-- Testimonial Start -->
+<!--
+     Testimonial Start 
     <div class="container-fluid py-5" id="testimonial">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -446,10 +447,9 @@
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
+     Testimonial End -->
 
-
-    <!-- Blog Start -->
+    <!-- Blog Start
     <div class="container-fluid pt-5" id="blog">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
@@ -493,15 +493,15 @@
             </div>
         </div>
     </div>
-    <!-- Blog End -->
+     Blog End -->
 
 
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact</h1>
-                <h1 class="position-absolute text-uppercase text-primary">Contact Me</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contact Me</h1>
+                <h1 class="position-absolute text-uppercase text-primary"></h1>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -548,10 +548,10 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+              <!--  <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+               <!-- <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a> -->
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/francomanuelceballos/"><i class="fab fa-linkedin-in"></i></a>
+              <!--  <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>-->
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
@@ -562,7 +562,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Domain Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Domain Name</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold">Franco Ceballos</a>
             </p>
         </div>
     </div>
