cambie casi todo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h3 class="text-secondary font-weight-normal mb-3">Hello! I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 0px #000000"> Franco Manuel Ceballos </h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter"></h1>
-                    <div class="typed-text d-none">Trainee FullStack Developer</div>
+                    <div class="typed-text d-none">Trainee FullStack Developer, Information Systems Engineering Student</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="/files/Cv-FrancoManuelCeballos-2023-5.pdf" class="btn btn-light mr-5">Descargar CV <br>Español</a>
                         <a href="/files/Cv-FrancoManuelCeballos-2023-5.pdf" class="btn btn-light mr-5">Download CV<br>English</a>
@@ -111,16 +111,29 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Fulltack Developer</h3>
-                    <p>¡Hola! Soy Franco Ceballos, un apasionado desarrollador Full Stack en proceso de aprendizaje y crecimiento en el emocionante mundo de la programación. Mi pasión por la tecnología y el desarrollo de software me ha llevado a embarcarme en esta emocionante carrera para convertirme en un experto en la construcción de aplicaciones web y soluciones innovadoras.
+
+                    <button class="btn btn-light mr-5" onclick="cambiarIdioma('es')">Español</button>
+                    <button class="btn btn-light mr-5" onclick="cambiarIdioma('en')">English</button><br><br>
+
+                  
+                    <div id="contenido">
+                        <p id="saludo">¡Hola! Soy Franco Ceballos, un apasionado desarrollador Full Stack en proceso de aprendizaje y crecimiento en el emocionante mundo de la programación.</p>   
+                        <p id="parrafo1"> Mi pasión por la tecnología y el desarrollo de software me ha llevado a embarcarme en esta emocionante carrera para convertirme en un experto en la construcción de aplicaciones web y soluciones innovadoras.</p>
+                        <p id="parrafo2"> Desde que empecé mi viaje como desarrollador trainee, he estado dedicando tiempo y esfuerzo a adquirir un conjunto diverso de habilidades en el desarrollo de aplicaciones web.</p>
+                        <p id="parrafo3"> He explorado lenguajes de programación tanto en el lado del cliente como en el servidor, incluyendo HTML, CSS, JavaScript y más. Además, he trabajado con tecnologías populares como React, Node.js y bases de datos SQL.</p>
+                        <p id="parrafo4"> ¡Gracias por visitar mi página web y estaré encantado de conectarme contigo y conocer más sobre tus proyectos y metas! Aquí debajo podrás encontrar formas de contactarme</p>                  
+                    </div>
+
+               <!--     <p lang="ES">¡Hola! Soy Franco Ceballos, un apasionado desarrollador Full Stack en proceso de aprendizaje y crecimiento en el emocionante mundo de la programación. Mi pasión por la tecnología y el desarrollo de software me ha llevado a embarcarme en esta emocionante carrera para convertirme en un experto en la construcción de aplicaciones web y soluciones innovadoras.
                         <br><br> Desde que empecé mi viaje como desarrollador trainee, he estado dedicando tiempo y esfuerzo a adquirir un conjunto diverso de habilidades en el desarrollo de aplicaciones web. He explorado lenguajes de programación tanto en el lado del cliente como en el servidor, incluyendo HTML, CSS, JavaScript y más. Además, he trabajado con tecnologías populares como React, Node.js y bases de datos SQL.
-                        <br><br> ¡Gracias por visitar mi página web y estaré encantado de conectarme contigo y conocer más sobre tus proyectos y metas!<br><br>Aquí debajo podrás encontrar formas de contactarme</p>
+                        <br><br> ¡Gracias por visitar mi página web y estaré encantado de conectarme contigo y conocer más sobre tus proyectos y metas!<br><br>Aquí debajo podrás encontrar formas de contactarme</p> -->
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Franco Ceballos</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">19 Jan 1996</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Grade</span></h6></div>
                         <!--<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">10 Years</span></h6></div> 
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">francoceballos@skrill.com</span></h6></div>-->
-                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">francomanuelceballos@gmail.com francoceballos@skiff.com </span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary"><br>francomanuelceballos@gmail.com<br>francoceballos@skiff.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Country: <span class="text-secondary">Argentina</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
