--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
      Blog End -->
 
 
-    <!-- Contact Start 
+    <!-- Contact Start -->
     <div class="container-fluid py-5 bg-light" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
