--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h3 class="text-secondary font-weight-normal mb-3">Hello! I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 0px #000000"> Franco Manuel Ceballos </h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter"></h1>
-                    <div class="typed-text d-none">Trainee FullStack Developer, Systems Engineering Student</div>
+                    <div class="typed-text d-none">Junior FullStack Developer, Systems Engineering Student</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="/files/CV-FrancoCeballos-2023-3.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5">Descargar CV <br>Español</a>
                         <a href="/files/CV-FrancoCeballos-2023-3.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5">Download CV<br>English - not done yet</a>
