--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter"></h1>
                     <div class="typed-text d-none">Junior FullStack Developer, Systems Engineering Student</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="/files/CV-FrancoCeballos-2023-3.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5">Descargar CV <br>Español</a>
-                        <a href="/files/CV-FrancoCeballos-2023-3.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5">Download CV<br>English - not done yet</a>
+                        <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5">Descargar CV <br>Español</a>
+                        <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5" disabled>Download CV<br>English - not done yet</a>
                         <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 " href="https://www.linkedin.com/in/francomanuelceballos/"><span class="fab fa-linkedin"></span>
                         </a>
                     </div>
