--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid d-flex align-items-center mb-5 py-5 bg-dark" id="home" style="min-height: 100vh; background-image: url('img/bg.jpg');">
+    <div class="container-fluid d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh; background-image: url('img/bg.jpg');">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
