modified:   img/profile.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="col-sm-6 py-2 text-light"><h6>Country: <span class="text-secondary">Argentina</span></h6></div>
                         <div class="col-sm-6 py-2 text-light"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <button type="button" href="https://www.linkedin.com/in/francomanuelceballos/" class="btn btn-outline-primary mr-4">Find me in LinkedIn</button>
+                    <button type="button" href="https://www.linkedin.com/in/francomanuelceballos/" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3">Find me in LinkedIn</button>
                     
                 </div>
             </div>
