--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
             <a href="#about" class="nav-item nav-link">About</a>
             <a href="#qualification" class="nav-item nav-link">Quality</a>
             <a href="#skill" class="nav-item nav-link">Skill</a>
-            <a href="#service" class="nav-item nav-link">Service</a>
-            <a href="#contact" class="nav-item nav-link">Contact</a>
         </div>
-        <a href="" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+        <a href="https://www.linkedin.com/in/francomanuelceballos/" class="btn btn-outline-primary d-none d-lg-block">Contact me</a>
     </div>
 </nav>
 <!-- Navbar End -->
