modified:   index.html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="typed-text d-none">Junior FullStack Developer, Systems Engineering Student</div>
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                     <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5 me-3" role="button">Descargar CV <br>Español</a>
-                    <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3" role="button" disabled>Download CV<br>English - not done yet</a>
+                    <button type="button" href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3" role="button" disabled>Download CV<br>English - not done yet</button>
                     <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 bi bi-linkedin" href="https://www.linkedin.com/in/francomanuelceballos/" role="button">LinkedIn<span class="bi bi-linkedin"></span></a>
                 </div>
             </div>
