modified:   index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                     <a href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-4 mt-5 me-3" role="button">Descargar CV <br>Español</a>
                     <button type="button" href="/files/CV-Ceballos-Franco-2024.pdf" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3" role="button" disabled>Download CV<br>English - not done yet</button>
-                    <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 bi bi-linkedin" href="https://www.linkedin.com/in/francomanuelceballos/" role="button">LinkedIn<span class="bi bi-linkedin"></span></a>
+                    <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" href="https://www.linkedin.com/in/francomanuelceballos/" role="button"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn Logo" style="width: 48px; height: 48px; margin-right: 5px;">LinkedIn</a>
+                    <a class="btn btn-light btn-social mr-1 text-center ml-3 mt-5 me-3" href="https://github.com/francomceballos" role="button"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo" style="width: 48px; height: 48px; margin-right: 5px;">GitHub</a>                  
                 </div>
             </div>
         </div>
