modified:   index.html

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <ul>
                 <li>TypeScript</li>
                 <li>Angular</li>
-                <li>Java, SpringBoot</li>
+                <li>Java</li>
                 <li>SpringBoot</li>
                 <li>Base de datos: MySQL</li>
             </ul>
