--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <div class="navbar-nav m-auto py-0">
             <a href="#home" class="nav-item nav-link active">Home</a>
             <a href="#about" class="nav-item nav-link">About</a>
-            <a href="#qualification" class="nav-item nav-link">Quality</a>
+            <a href="#qualification" class="nav-item nav-link">Education</a>
+            <a href="#experience" class="nav-item nav-link">Experience</a>
             <a href="#soft-skills" class="nav-item nav-link"> Soft Skills</a>
             <a href="#skill" class="nav-item nav-link">Skill</a>
         </div>
@@ -98,9 +99,9 @@
         </div>
         <div class="row align-items-center">
             <div class="col-lg-5 pb-4 pb-lg-0">
-                <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
-            </div>
-            <div class="col-lg-7">
+                <img class="img-fluid rounded w-100" src="img/p1.gif" alt="developer">
+                </div>
+                <div class="col-lg-7">
                 <h3 class="mb-4 text-light">Full Stack Developer</h3>
 
                 <button class="btn btn-light mr-5" onclick="cambiarIdioma('es')">Español</button>
@@ -133,7 +134,7 @@
 <div class="container-fluid py-5 bg-dark" id="qualification">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
-            <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">Education & Experience</h1>
+            <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">Education</h1>
             <h1 class="position-absolute text-uppercase text-primary"></h1>
         </div>
         <div class="row align-items-center">
@@ -169,10 +170,10 @@
 
 
 <!-- Qualification Start -->
-<div class="container-fluid py-5 bg-dark" id="qualification">
+<div class="container-fluid py-5 bg-dark" id="experience">
     <div class="container text-light text-justify">
         <div class="position-relative d-flex align-items-center justify-content-center">
-            <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">My Experience</h1>
+            <h1 class="display-1 text-uppercase text-light text-center style">My Experience</h1>
             <h1 class="position-absolute text-uppercase text-primary"></h1>
         </div>
 
