modified:   index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
  <!-- About Start -->
-<div class="container-fluid py-5 bg-dark" id="about">
+<div class="container-fluid py-5" style="background-color: #2b2b2b;" id="about">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">About Me</h1>
@@ -170,14 +170,14 @@
 
 
 <!-- Qualification Start -->
-<div class="container-fluid py-5 bg-dark" id="experience">
-    <div class="container text-light text-justify">
+<div class="container-fluid py-5" style="background-color: #2b2b2b;" id="experience">
+    <div class="container text-light text-justify float-md-right">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-light text-center style">My Experience</h1>
             <h1 class="position-absolute text-uppercase text-primary"></h1>
         </div>
 
-        <div class="proyecto">
+        <div>
             <h1>Aplicación web de manejo de inventarios</h1>
             <p>
                 Aplicación para el manejo de inventarios realizada con:
@@ -192,7 +192,7 @@
             <a href="https://github.com/francomceballos/App-FullStack-manejo-de-inventarios" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3">Ver código en GitHub</a>
         </div>
         <br> <br> 
-        <div class="proyecto">
+        <div>
             <h1>Página web personal</h1>
             <p>
                 Página web personal realizada con:
@@ -206,7 +206,7 @@
             <a href="https://github.com/francomceballos/freelancer-portfolio" class="btn btn-light mr-1 text-center ml-3 mt-5 me-3">Ver código en GitHub</a>
         </div>
         <br> <br>   
-        <div class="proyecto">
+        <div>
             <h1>Aplicación web de Recursos Humanos</h1>
             <p>
                 Aplicación para la gestión de recursos humanos realizada con:
@@ -306,7 +306,7 @@
 
 
 <!-- Skill Start -->
-<div class="container-fluid py-5 bg-dark" id="skill">
+<div class="container-fluid py-5" style="background-color: #2b2b2b;" id="skill">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-light" style="-webkit-text-stroke: 0px #dee2e6;">My Skills</h1>
